tp/kubernetes/pgadmin-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ..\docker-compose-production.yml
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin-tcp
  name: pgadmin-tcp
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 80
  selector:
    io.kompose.service: pgadmin
  type: LoadBalancer
status:
  loadBalancer: {}
