tp/kubernetes/sql-service.yaml
# This is a service that exposes the postgresql-ha service on port 5432
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app.kubernetes.io/name: postgresql-ha
    app: prepare-three-zone-ha
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
status:
  loadBalancer: {}
